# mina-on-chain-voting

./: .env.example  CHANGELOG.md  GCS_MIGRATION_PLAN.md  Justfile  NEW_MIPS_PROCESS.md  OCV_PROCESS.md  README.md  STORAGE_BACKENDS.md  TESTING_GUIDE.md  docker-compose.yaml  package-lock.json  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: check-rust.yaml  publish.yml
ops/: shell.nix
server/: Cargo.toml  Dockerfile  Dockerfile.dev
server/proposals/: proposals.json  proposals_schema.json
server/src/: archive.rs  config.rs  ledger.rs  lib.rs  ocv.rs  proposals.rs  util.rs  vote.rs
server/src/storage/: aws_s3.rs  factory.rs  gcs.rs  mod.rs
web/: package.json  pnpm-lock.yaml
web/app/: layout.tsx
web/app/proposal/[id]/: page.tsx
web/app/proposal/[id]/results/: page.tsx
web/common/: config.ts  fetch.ts  store.ts
web/components/: layout-footer.tsx  layout-nav-desktop.tsx  mina-logo.tsx  proposal-table.tsx  votes-metrics.tsx  votes-table-toolbar.tsx  votes-table.tsx
web/components/core/: data-table.tsx
web/models/: schema.ts
